
import UIKit

class ViewController: UIViewController {

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Attraction App"
        // Do any additional setup after loading the view.
    }


}

