...
    var saveMsg : String = ""
    
    let database = Firestore.firestore()

    override func viewDidLoad() {
        super.viewDidLoad()
        title = "Attraction Finder"
        //init notification
        UNUserNotificationCenter.current().requestAuthorization(options: [.alert, .sound, .badge]) {(granted, error) in}
        //init gps
        if CLLocationManager.locationServicesEnabled() {
            self.locationManager = CLLocationManager();
            self.locationManager?.delegate = self;
...
